--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.8.4",
     "fastclick": "^1.0.6",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
